@@ -1,3 +1,3 @@
-color = rgb { 100 0 0 } # red
+color = rgb { 0 0 200 } # red
 graphical_culture = western_european_gfx
 graphical_culture_2d = western_european_2d
