@@ -23,7 +23,7 @@ state={
 	}
 
 	provinces={
-		480 3262 6496 6500 9431 11456 11562 
+		480 3262 6496 6500 9431 9498 11456 11562 
 	}
 	manpower=1449000
 	buildings_max_level_factor=1.000
