@@ -1,9 +1,4 @@
 ﻿l_english:
 
 # change these names into something more serious one day. or not. it's funny.
-STATE_1017: "SigmaLand" 
-STATE_1018: "AlphaLand"
-STATE_1019: "DeltaLand"
-STATE_1020: "OmegaLand"
-STATE_1021: "BrapLand"
-STATE_1022: "SouthLand"
+STATE_1017: "East Rhineland" 
