@@ -3,3 +3,5 @@
 specific national sprits for the WRE:
     * Economic Inequality 
     * Insufficient Disease Theory
+
+add more states
